5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1601_1801.log
== TEST (2019-04-08 08:15:44) 
-- CODE:

nome_do_objeto = f1 = input()
numero_repeticoes = f2 = input()

print("Abra" + "f1")
-- OUTPUT:
Abraf1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:16:31) 
-- CODE:

nome_do_objeto = input()
numero_repeticoes = f2 = input()

print("Abra" + "f1")
-- OUTPUT:
Abraf1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:17:07) 
-- CODE:

nome_do_objeto = input()
numero_repeticoes = f2 = input()

print("Abra" + "nome_do_objeto")
-- OUTPUT:
Abranome_do_objeto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:17:58) 
-- CODE:

nome_do_objeto = 
numero_repeticoes = f2 = input()

print("Abra" + input())
-- ERROR:
File "XXXX", line 2
    nome_do_objeto = 
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:18:13) 
-- CODE:
 
numero_repeticoes = f2 = input()

print("Abra" + input())
-- OUTPUT:
Abra8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:18:50) 
-- CODE:
 
numero_repeticoes = f2 = input()

print("Abra" + "input()")
-- OUTPUT:
Abrainput()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:22:10) 
-- CODE:

numero_repeticoes = f2 = input()

print("Abra " + input())
-- OUTPUT:
Abra 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:23:40) 
-- CODE:

numero_repeticoes = f2 = input()

print("Abra + input()" * 4)

-- OUTPUT:
Abra + input()Abra + input()Abra + input()Abra + input()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:24:20) 
-- CODE:

numero_repeticoes = f2 = input()

print("Abra" + "input()" * 4)

-- OUTPUT:
Abrainput()input()input()input()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:25:21) 
-- CODE:

f1 = input()

print(("Abra" + f1) * 4)

-- OUTPUT:
AbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 08:25:34) 
-- CODE:

f1 = input()

print(("Abra" + f1) * 4)

-- EXECUTION TIME:
0.155715
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
AbralivroAbralivroAbralivroAbralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
AbracarroAbracarroAbracarroAbracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
AbracaixaAbracaixaAbracaixaAbracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:25:48) 
-- CODE:

f1 = input()

print(("Abra" + f1) * 4)

-- OUTPUT:
AbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:25:58) 
-- CODE:

f1 = input()

print(("Abra " + f1) * 4)

-- OUTPUT:
Abra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:26:20) 
-- CODE:

f1 = input()

print((" Abra " + f1) * 4)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 08:26:34) 
-- CODE:

f1 = input()

print((" Abra " + f1) * 4)

-- EXECUTION TIME:
0.130138
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa Abra caixa Abra caixa Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 08:26:44) 
-- CODE:

f1 = input()

print((" Abra " + f1) * 4)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:01:41) 
-- CODE:
f1 = input()

print((" Abra " + f1) * 4)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 19:02:33) 
-- CODE:
f1 = input()
f2 = int(input())

print((" Abra " + f1) * f2)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 19:02:47) 
-- CODE:
f1 = input()
f2 = int(input())

print((" Abra " + f1) * f2)

-- EXECUTION TIME:
0.125573
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
